--- a/ldj43/ldj43.uproject
+++ b/ldj43/ldj43.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ldj43",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
