--- a/ldj43/ldj43.uproject
+++ b/ldj43/ldj43.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{58C900F5-4F37-6949-04E7-0CAF51D07AAB}",
+	"EngineAssociation": "4.20",
 	"Category": "",
 	"Description": "",
 	"Modules": [
